k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-app
  labels:
    app: task-app
spec:
  selector:
    app: task-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
